Add Ada changes.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -65,6 +65,29 @@
   
 <h2>New Languages and Language specific improvements</h2>
 
+<h3>Ada</h3>
+  <ul>
+    <li>The Ada front-end has been updated to include numerous
+        bug fixes and enhancements.  These include:
+    <ul>
+       <li>Improved project file support </li>
+       <li>Additional set of warnings about potential wrong code </li>
+       <li>Improved error messages </li>
+       <li>Improved code generation </li>
+       <li>Improved cross reference information </li>
+       <li>Improved inlining </li>
+       <li>Better run-time check elimination </li>
+       <li>Better error recovery </li>
+       <li>More efficient implementation of unbounded strings </li>
+       <li>Added features in GNAT.Sockets, GNAT.OS_Lib,
+           GNAT.Debug_Pools, ... </li>
+       <li>New GNAT.xxxx packages (e.g. GNAT.Strings,
+           GNAT.Exception_Action) </li>
+       <li>New pragmas </li>
+     </ul>
+     </li>
+  </ul>
+
 <h3>C/Objective-C/C++</h3>
 
   <ul>
