--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -173,11 +173,12 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>as and ld from binutils 2.13.1</td>
 <td>Bootstrap:
-<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00503.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00503.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01608.html">3.3</a>
 <br />Test results:
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00979.html">3.3</a>,
-<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00471.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00917.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00471.html">3.3.1</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00979.html">3.3</a>
 </td>
 </tr>
 
@@ -334,6 +335,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00896.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00803.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00789.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00739.html">3.3.2</a>,
@@ -527,6 +529,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>ia64-unknown-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00918.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00793.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00763.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00749.html">3.3.2</a>,
@@ -712,6 +715,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<tr>sh4-unknown-linux-gnu</td>
+<td>binutils 2.14.90, glibc 2.2.93, kernel 2.6.0-test8</td>
+<td>Bootstrap (C, C++):
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg01357.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -785,6 +796,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00531.html">3.3.1</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg00929.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>sparc-sun-solaris2.9</td>
+<td>binutils 2.14</td>
+<td>Bootstrap (C, C++, Obj-C):
+<a href="http://gcc.gnu.org/ml/gcc/2003-10/msg01132.html">3.3.2</a>
 </td>
 </tr>
 
