fix a formatting typo from the previous change

--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -715,7 +715,7 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
-<tr>sh4-unknown-linux-gnu</td>
+<td>sh4-unknown-linux-gnu</td>
 <td>binutils 2.14.90, glibc 2.2.93, kernel 2.6.0-test8</td>
 <td>Bootstrap (C, C++):
 <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg01357.html">3.3.2</a>
