--- a/htdocs/gcc-3.3/changes.html
+++ b/htdocs/gcc-3.3/changes.html
@@ -103,7 +103,7 @@
     macro arguments.</li>
 
     <li>The separate ISO and traditional preprocessors have been
-    completely removed.  The front-end handles either type of
+    completely removed.  The front end handles either type of
     preprocessed output if necessary.</li>
 
     <li>In C99 mode preprocessor arithmetic is done in the precision
@@ -502,7 +502,7 @@ Detailed release notes for the GCC 3.3 release follow.
 <li><a href="http://gcc.gnu.org/PR8750">8750</a> Cygwin prolog generation erroneously emitting <code>__alloca</code> as regular function call</li>
 </ul>
 
-<h4>c front end</h4>
+<h4>C front end</h4>
 <ul>
 <li><a href="http://gcc.gnu.org/PR2161">2161</a> long <code>if-else</code> cascade overflows parser stack</li>
 <li><a href="http://gcc.gnu.org/PR4319">4319</a> short accepted on <code>typedef</code>'d char</li>
