Use "front end" instead of "front-end" as a noun.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -67,7 +67,7 @@
 
 <h3>Ada</h3>
   <ul>
-    <li>The Ada front-end has been updated to include numerous
+    <li>The Ada front end has been updated to include numerous
         bug fixes and enhancements.  These include:
     <ul>
        <li>Improved project file support </li>
@@ -262,7 +262,7 @@
 <h3>Objective-C</h3>
 
   <ul>
-    <li>The Objective-C front-end has been updated to include the numerous
+    <li>The Objective-C front end has been updated to include the numerous
         bug fixes and enhancements previously available only in Apple's
         version of GCC.  These include:
     <ul>
