Fix redirected link and tweak markup.

--- a/htdocs/fortran/compilerstatus.html
+++ b/htdocs/fortran/compilerstatus.html
@@ -51,7 +51,7 @@ front end and translate it to the GENERIC form required by the GCC
 back end. Work is ongoing in these parts of G95, but a large part
 has already been completed.</p>
 
-Current issues being worked on include:
+<p>Current issues being worked on include:</p>
 <ul>
 <li>Handling of <code>CHARACTER</code> variables in
 <code>COMMON</code> blocks</li>
@@ -61,7 +61,7 @@ e.g. <code>TRANSPOSE(TRANSPOSE(A(:,:))</code></li>
 
 <h2 id="be">Middle end and Back end</h2>
 G95 uses the middle end and back end of GCC, more specifically, it is built on
-the <a href="../projects/tree-ssa">Tree-SSA</a> branch
+the <a href="../projects/tree-ssa/">Tree-SSA</a> branch
 of GCC which is meant to become part of GCC 3.5. We hope to be able to
 include at least a beta version of G95 into GCC by this time.
 
