--- a/htdocs/projects/ia64.html
+++ b/htdocs/projects/ia64.html
@@ -447,9 +447,9 @@ mentioned above is available from these sources:</p>
 </li>
 
 <li>Support for Linux kernel 2.4.18 to generate GCOV data:
-    <a href="ftp://ftp.sourceforge.net/pub/sourceforge/lse/gcov-2.4.17.tar.bz2">
+    <a href="ftp://ftp.sourceforge.net/lse/gcov-2.4.17.tar.bz2">
     kernel module</a>;
-    <a href="ftp://ftp.sourceforge.net/pub/sourceforge/lse/2.4.18-gcov.patch">
+    <a href="ftp://ftp.sourceforge.net/lse/2.4.18-gcov.patch">
     kernel patch</a>
 </li>
 
