Update URL of DWARF v2 spec.

--- a/htdocs/readings.html
+++ b/htdocs/readings.html
@@ -457,7 +457,7 @@ names.
   <li><a href="http://www.eagercon.com/dwarf/dwarf3std.htm">DWARF 3
   drafts (formerly DWARF 2.1)</a></li>
 
-  <li><a href="ftp://sgigate.sgi.com/pub/dwarf/">DWARF v2 spec and sample implementation</a></li>
+  <li><a href="ftp://ftp.sgi.com/sgi/dwarf/">DWARF v2 spec and sample implementation</a></li>
 
   <li><a href="http://www.opengroup.org/infosrv/plsig/">DWARF 1.1 and 2.06 specs</a></li>
 
