--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -1,6 +1,5 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
 <title>GNU Fortran 95 -- Free number crunching FORALL!</title>
 </head>
 
@@ -51,7 +50,7 @@ We also keep a <a href="todo.html">TODO list</a>.</p>
 <p>We encourage everyone to <a href="../contribute.html">contribute changes</a>
 and help test G95.  G95 is developed on the so-called "tree-ssa" branch of GCC.
 We provide read access to our development sources for everybody with
-<a href="../projects/tree-ssa/index.html">anonymous CVS</a>.
+<a href="../projects/tree-ssa/">anonymous CVS</a>.
 Daily snapshots of the branch are also <a
 href="http://people.redhat.com/dnovillo/pub/snapshot/">
 available</a>.</p>
@@ -75,7 +74,7 @@ page is preserved for historical reasons.</p>
 <dd>New x86 GNU/Linux binaries have been released. Get them
 <a href="http://sourceforge.net/project/showfiles.php?group_id=70680">here</a>.
 Note these tend to get out of date fairly quicky, so it's reccommended
-that you <a href="building.html">compile your own</a> from GCC CVS if
+that you compile your own from GCC CVS if
 possible.</dd>
 
 <dt><b>July 27, 2003</b></dt>
@@ -85,7 +84,7 @@ the <a href="../cvs.html">GCC CVS repository</a>
 (announcement on mailing list <a href="http://sourceforge.net/mailarchive/forum.php?thread_id=2840068&amp;forum_id=21262">here</a>). This
 branch of GCC will become part of official GCC releases by the time
 GCC 3.5 is released. This web page and our mailing list will move to
-<a href="../index.html">gcc.gnu.org</a> sometime soon.</dd>
+<a href="../">gcc.gnu.org</a> sometime soon.</dd>
 
 <dt><b>July 11, 2003</b></dt>
 <dd>The anonymous CVS server seems to get updated again, so please
