Remove extraneous <meta http-equiv>.  Update and sync <title> and <h1> and apply selected tweaks here and there.

--- a/htdocs/fortran/todo.html
+++ b/htdocs/fortran/todo.html
@@ -1,22 +1,21 @@
 <html>
 <head>
-<meta http-equiv="Content-Type" content="text/html; charset=iso-8859-1" />
-<title>Open Projects</title>
+<title>G95: Open Projects</title>
 </head>
 
 <body>
 
-<h1>G95: TODO list</h1>
+<h1>G95: Open Projects</h1>
 
-<p><b>This list is probably not complete, but it seems long enough
-already :-)</b></p>
+<p>This list is probably not complete, but it seems long enough
+already :-)</p>
 
 <h2>Parser</h2>
 <ul>
   <li>Give NULL() pointer correct attributes</li>
   <li>Fix array constructor handling in expressions and
   intrinsics</li>
-  <li>Finish implement section 14.1.2: Procedure type resolution
+  <li>Complete implementation of section 14.1.2: Procedure type resolution
   rules.</li>
   <li>Implement resolution of COMMON blocks and EQUIVALENCE
   associations</li>
@@ -25,7 +24,7 @@ already :-)</b></p>
   wrong place.</li>
   <li>Improve error printing for diagnostics within simplification
   functions.</li>
-  <li>See about making emacs-parsable error messages.</li>
+  <li>See about making Emacs-parsable error messages.</li>
   <li>Don't bother storing non-parameter variable initializers in modules.</li>
   <li>Check for improper (full section) use of assumed size arrays.</li>
   <li>Do something about the expr-&gt;symbol vs expr-&gt;value.function.esym mess.</li>
@@ -47,13 +46,13 @@ already :-)</b></p>
   <li>Produce debugging information.</li>
   <li>Improve generated code (lots of room for that).</li>
   <li>Don't create array descriptors where we don't need them (temporary
-arrays).</li>
+      arrays).</li>
   <li>Support large (unexpanded) array constructors as variable
-initializers.</li>
+      initializers.</li>
   <li>Use of array parameters in array declarations.</li>
   <li>Teach the scalarizer bounds calculation code about functions.</li>
   <li>Fix g77/f2c compatibility for returning complex numbers, and other
-wierdness.</li>
+      wierdness.</li>
   <li>Fix sequence association for non-g77 compatible fucntions.</li>
 </ul>
 
