* index.html: Shorten <title>.

--- a/htdocs/java/index.html
+++ b/htdocs/java/index.html
@@ -1,6 +1,6 @@
 <html>
 <head>
-<title>GCJ: The GNU Compiler for Java: Home Page</title>
+<title>GCJ: The GNU Compiler for Java</title>
 </head>
 
 <body>
