Update release status.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -71,7 +71,9 @@ to maintain and improve quality.</p>
 <!-- This is a fifth, permanent item. -->
 
 <dt><strong>Release status:</strong>
-  <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg00119.html">2003-10-03</a>
+  <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg01390.html">GCC 3.3.x
+     (2003-10-29)</a>
+ | GCC 3.4
 </dt><dd>
 </dd>
 
