Change presentation of release status.

--- a/htdocs/index.html
+++ b/htdocs/index.html
@@ -51,30 +51,23 @@ to maintain and improve quality.</p>
 <dt><strong>Current release series:</strong>
   <a href="gcc-3.3/">GCC 3.3.2</a> (released 2003-10-17)
 </dt><dd>
-  The branch is open for regression fixes only.
+  Branch status:
+     <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg01390.html">2003-10-29</a>
+  (open for regression fixes).
 </dd>
 
 <dt><strong>Previous release series:</strong>
   <a href="gcc-3.2/">GCC 3.2.3</a> (released 2003-04-25)
 </dt><dd>
-  This is the last release from the 3.2.x series.
-  The branch has been closed after the release.
+  This is the last release from the 3.2.x series;
+  the branch has been closed after the release.
 </dd>
 
 <dt><strong>Active development (mainline):</strong>
   will become GCC 3.4 (<a href="gcc-3.4/changes.html">current changes</a>)
 </dt><dd>
-  <a href="develop.html#stage2">Stage 2</a>;
+  <a href="develop.html#stage2">Stage 3</a>;
   open for all maintainers.
-</dd>
-
-<!-- This is a fifth, permanent item. -->
-
-<dt><strong>Release status:</strong>
-  <a href="http://gcc.gnu.org/ml/gcc/2003-10/msg01390.html">GCC 3.3.x
-     (2003-10-29)</a>
- | GCC 3.4
-</dt><dd>
 </dd>
 
 </dl>
