Update my affiliation.

--- a/htdocs/steering.html
+++ b/htdocs/steering.html
@@ -37,8 +37,7 @@ reach them is the gcc <a href="lists.html">mailinglist</a>.</p>
 <li>David Miller (Red Hat)</li>
 <li>Mark Mitchell (CodeSourcery)</li>
 <li>Toon Moene (Koninklijk Nederlands Meteorologisch Instituut)</li>
-<li>Gerald Pfeifer (Centro di Ingegneria Economica e Sociale,
-                    Università della Calabria)</li>
+<li>Gerald Pfeifer (SUSE)</li>
 <li>Joel Sherrill (OAR Corporation)</li>
 <li>Jim Wilson (Specifix Inc)</li>
 </ul>
