Mention the saveall attribute.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -384,7 +384,11 @@
     production you will have to uncomment the entries in that
     file.</li>
     
-    <li>Support for <code>long long</code> added to the H8/300 port.</li>
+    <li>Support for <code>long long</code> has been added to the
+    H8/300 port.</li>
+
+    <li>Support for <code>saveall</code> attribute has been added to
+    the H8/300 port.</li>
 
     <li>Support for the RM7000 and RM9000 processors has been added to the
     MIPS port.  It is activated by the <code>-march</code> compiler option
