--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -26,8 +26,9 @@ Installing GCC: Final Installation</a>.</p>
 <td>alpha-dec-osf4.0f</td>
 <td>&nbsp;</td>
 <td>Bootstrap (C, C++, F77, Obj-C, Java, Ada; with tweaks):
-<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00014.html">3.3</a>,
+<a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00690.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-09/msg01275.html">3.3.1</a>
+<a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00014.html">3.3</a>
 </td>
 </tr>
 
@@ -161,6 +162,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>hppa1.1-hp-hpux10.20</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00100.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>hppa2.0w-hp-hpux11.00</td>
 <td>&nbsp;</td>
 <td>Test results:
@@ -197,6 +206,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-08/msg00344.html">3.3.1</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01094.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i386-pc-solaris2.9</td>
+<td>Sun ld and as, GNU make 3.80</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00001.html">3.3.2</a>
 </td>
 </tr>
 
@@ -246,7 +263,10 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i386-unknown-openbsd3.3</td>
 <td>OpenBSD 3.3</td>
 <td>Bootstrap (C, C++, F77):
+<a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00577.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-07/msg00278.html">3.3</a>
+<br />Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg01344.html">3.3.2</a>
 </td>
 </tr>
 
@@ -726,6 +746,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>sparc-sun-solaris2.5.1</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00395.html">3.3.2</a>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01166.html">3.3</a>
 </td>
 </tr>
@@ -808,6 +829,14 @@ NOTE: the submitter reported that thread support is broken and asked
 </tr>
 
 <tr>
+<td>sparc-sun-solaris2.9</td>
+<td>&nbsp;</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00396.html">3.3.2</a>
+</td>
+</tr>
+
+<tr>
 <td>sparc-unknown-linux-gnu</td>
 <td>Debian</td>
 <td>Test results:
@@ -832,6 +861,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>SunOS 5.9, Sun as and ld</td>
 <td>Bootstrap:
 <a href="http://gcc.gnu.org/ml/gcc/2003-08/msg00549.html">3.3.1</a>
+</td>
+</tr>
+
+<tr>
+<td>sparcv9-sun-solaris2.9</td>
+<td>GNU as and ld</td>
+<td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg01012.html">3.3.2</a>
 </td>
 </tr>
 
