--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -79,11 +79,14 @@
        <li>Better run-time check elimination </li>
        <li>Better error recovery </li>
        <li>More efficient implementation of unbounded strings </li>
-       <li>Added features in GNAT.Sockets, GNAT.OS_Lib,
-           GNAT.Debug_Pools, ... </li>
-       <li>New GNAT.xxxx packages (e.g. GNAT.Strings,
-           GNAT.Exception_Action) </li>
+       <li>Added features in <code>GNAT.Sockets</code>,
+           <code>GNAT.OS_Lib</code>, <code>GNAT.Debug_Pools</code>, ... </li>
+       <li>New <code>GNAT.xxxx</code> packages (e.g. <code>GNAT.Strings</code>,
+           <code>GNAT.Exception_Action</code>) </li>
        <li>New pragmas </li>
+       <li>New <code>-gnatS<code> switch replacing <code>gnatpsta</code></li>
+       <li>Implementation of new Ada features (in particular limited with,
+           limited aggregates)</li>
      </ul>
      </li>
   </ul>
