Fix typo in previous change.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -83,8 +83,8 @@
            <code>GNAT.OS_Lib</code>, <code>GNAT.Debug_Pools</code>, ... </li>
        <li>New <code>GNAT.xxxx</code> packages (e.g. <code>GNAT.Strings</code>,
            <code>GNAT.Exception_Action</code>) </li>
-       <li>New pragmas </li>
-       <li>New <code>-gnatS<code> switch replacing <code>gnatpsta</code></li>
+       <li>New pragmas</li>
+       <li>New <code>-gnatS</code> switch replacing <code>gnatpsta</code></li>
        <li>Implementation of new Ada features (in particular limited with,
            limited aggregates)</li>
      </ul>
