--- a/htdocs/gcc-3.3/buildstat.html
+++ b/htdocs/gcc-3.3/buildstat.html
@@ -355,6 +355,8 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>i686-pc-linux-gnu</td>
 <td>&nbsp;</td>
 <td>Test results:
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00572.html">3.3.2</a>,
+<a href="http://gcc.gnu.org/ml/gcc-testresults/2003-11/msg00550.html">3.3.2</a>
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00896.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00803.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-10/msg00789.html">3.3.2</a>,
@@ -453,6 +455,14 @@ NOTE: the submitter reported that thread support is broken and asked
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01824.html">3.3</a>
 <br />Test results:
 <a href="http://gcc.gnu.org/ml/gcc-testresults/2003-05/msg01017.html">3.3</a>
+</td>
+</tr>
+
+<tr>
+<td>i686-pc-linux-gnu</td>
+<td>Red Hat 8.0, glibc 2.3.2, kernel 2.6.0-test9</td>
+<td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00793.html">3.3.2</a>
 </td>
 </tr>
 
@@ -663,6 +673,7 @@ NOTE: the submitter reported that thread support is broken and asked
 <td>powerpc-ibm-aix5.2.0.0</td>
 <td>&nbsp;</td>
 <td>Bootstrap:
+<a href="http://gcc.gnu.org/ml/gcc/2003-11/msg00697.html">3.3.2</a>,
 <a href="http://gcc.gnu.org/ml/gcc/2003-05/msg01612.html">3.3</a>
 </td>
 </tr>
