* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-11-14.
+2003-11-16.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -41,9 +41,8 @@ differences are currently required.</p>
 <tr> <td>gnu.javax.swing.plaf.gtk.GtkSliderUI</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>gnu.javax.swing.plaf.gtk.SliderTest</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.awt.Component</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Component.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.Font</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.Font.diff">Diff</a></td> </tr>
+<tr> <td>java.awt.GridBagLayout</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.GridBagLayout.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.MediaTracker</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MediaTracker.diff">Diff</a></td> </tr>
-<tr> <td>java.awt.datatransfer.DataFlavor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.datatransfer.DataFlavor.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.geom.FlatteningPathIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.geom.FlatteningPathIterator.diff">Diff</a></td> </tr>
 <tr> <td>java.io.ByteArrayOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ByteArrayOutputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
@@ -76,9 +75,6 @@ differences are currently required.</p>
 <tr> <td>java.lang.reflect.Field</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.reflect.Method</td> <td>Yes</td> <td>VM-specific</td> <td>&nbsp;</td> </tr>
 <tr> <td>java.lang.reflect.Modifier</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.lang.reflect.Modifier.diff">Diff</a></td> </tr>
-<tr> <td>java.math.BigInteger</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.math.BigInteger.diff">Diff</a></td> </tr>
-<tr> <td>java.net.Inet4Address</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.Inet4Address.diff">Diff</a></td> </tr>
-<tr> <td>java.net.Inet6Address</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.Inet6Address.diff">Diff</a></td> </tr>
 <tr> <td>java.net.InetAddress</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.InetAddress.diff">Diff</a></td> </tr>
 <tr> <td>java.net.JarURLConnection</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.net.JarURLConnection.diff">Diff</a></td> </tr>
 <tr> <td>java.net.MimeTypeMapper</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
@@ -90,16 +86,13 @@ differences are currently required.</p>
 <tr> <td>java.nio.DirectByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.DirectByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.MappedByteBufferImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.MappedByteBufferImpl.diff">Diff</a></td> </tr>
 <tr> <td>java.nio.channels.FileChannelImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.nio.channels.FileChannelImpl.diff">Diff</a></td> </tr>
-<tr> <td>java.rmi.MarshalledObject</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.MarshalledObject.diff">Diff</a></td> </tr>
-<tr> <td>java.rmi.server.RMIClassLoader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.rmi.server.RMIClassLoader.diff">Diff</a></td> </tr>
 <tr> <td>java.security.BasicPermission</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.BasicPermission.diff">Diff</a></td> </tr>
-<tr> <td>java.security.cert.CertStore</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.security.cert.CertStore.diff">Diff</a></td> </tr>
-<tr> <td>java.sql.Timestamp</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.sql.Timestamp.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationElementIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationElementIterator.diff">Diff</a></td> </tr>
 <tr> <td>java.text.CollationKey</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.CollationKey.diff">Diff</a></td> </tr>
 <tr> <td>java.text.Collator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.Collator.diff">Diff</a></td> </tr>
+<tr> <td>java.text.DecimalFormat</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.DecimalFormat.diff">Diff</a></td> </tr>
+<tr> <td>java.text.DecimalFormatSymbols</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.DecimalFormatSymbols.diff">Diff</a></td> </tr>
 <tr> <td>java.text.RuleBasedCollator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.RuleBasedCollator.diff">Diff</a></td> </tr>
-<tr> <td>java.text.SimpleDateFormat</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.text.SimpleDateFormat.diff">Diff</a></td> </tr>
 <tr> <td>java.util.HashMap</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.HashMap.diff">Diff</a></td> </tr>
 <tr> <td>java.util.Hashtable</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.Hashtable.diff">Diff</a></td> </tr>
 <tr> <td>java.util.ResourceBundle</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.util.ResourceBundle.diff">Diff</a></td> </tr>
@@ -118,13 +111,16 @@ differences are currently required.</p>
 <tr> <td>java.util.zip.OutputWindow</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.util.zip.PendingBuffer</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.util.zip.StreamManipulator</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
-<tr> <td>javax.naming.CompoundName</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.naming.CompoundName.diff">Diff</a></td> </tr>
 <tr> <td>javax.rmi.BAD_OPERATION</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.ORB</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>javax.swing.UIManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.UIManager.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.undo.AbstractUndoableEdit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.AbstractUndoableEdit.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.undo.CannotRedoException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.CannotRedoException.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.undo.CannotUndoException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.CannotUndoException.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.undo.StateEdit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.StateEdit.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.undo.StateEditable</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.StateEditable.diff">Diff</a></td> </tr>
 <tr> <td>javax.xml.parsers.ClassStuff</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilder</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.xml.parsers.DocumentBuilderFactory</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
