Remove redundancy in target-specific improvements.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -344,7 +344,7 @@
     the new code.</li>
 
     <li>Support for the Intel's iWMMXt architecture, a second
-    generation XScale processor, has been addded to the ARM port.
+    generation XScale processor, has been addded.
     Enabled at run time with the <code>-mcpu=iwmmxt</code> command
     line switch.</li>
     
@@ -361,7 +361,7 @@
     to understand</a>.</li>
     
     <li>Support for the Cirrus EP9312 Maverick floating point
-    co-processor added to the ARM port.  Enabled at run time with the
+    co-processor added.  Enabled at run time with the
     <code>-mcpu=ep9312</code> command line switch.  Note however that
     the multilibs to support this chip are currently disabled in
     <code>gcc/config/arm/t-arm-elf</code>, so if you want to enable their
@@ -402,8 +402,8 @@
 
 <h4>MIPS</h4>
   <ul>
-    <li>Support for the RM7000 and RM9000 processors has been added to the
-    MIPS port.  It is activated by the <code>-march</code> compiler option
+    <li>Support for the RM7000 and RM9000 processors has been added.
+    It is activated by the <code>-march</code> compiler option
     and should work with any MIPS I (<code>mips-*</code>) or MIPS III
     (<code>mips64-*</code>) configuration.</li>
 
@@ -424,7 +424,7 @@
 
 <h4>SuperH</h4>
   <ul>
-    <li>Support for the SH2E processor has been added to the SH port.
+    <li>Support for the SH2E processor has been added.
     Enabled at run time with the <code>-m2e</code> command line
     switch, or at configure time by specifying sh2e as the machine
     part of the target triple.</li>
