Make it even more clear that our lists are archived.  Simplify and shorten the page a bit on the way.

--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -12,7 +12,13 @@
         not have that part of the site!
 -->
 
-<p><a name="gcc">The GCC project has many mailing lists</a>:</p>
+<p><a name="gcc">The GCC project has many mailing lists, which are
+archived on the web (and
+<a href="http://gcc.gnu.org/lists.html#searchbox">searchable</a>)
+as well as in
+<a href="ftp://gcc.gnu.org/pub/gcc/mail-archives/">mbox format</a>.
+</p>
+
 
 <p>Announcement lists:</p>
 
@@ -161,24 +167,6 @@ web-based e-mail account.</p>
 <p>are acceptable, although they are redundant; unless explicitly stated,
 it's assumed that no-one on these lists means to speak for their company.</p>
 
-<h2>Archives</h2>
-
-<p>In addition to the web archives that are linked from the descriptions
-above, we also provide
-<a href="ftp://gcc.gnu.org/pub/gcc/mail-archives/">mbox formatted
-archives of each mailing list</a>.  The <a
-href="ftp://gcc.gnu.org/pub/libstdc++/mail-archives/">mbox formatted
-archives of the libstdc++ mailing lists</a> are at present in a
-separate directory.</p>
-
-<!--
-  NOTE: The server-side included form does not show up at mirrors, so refer
-        to it by an explicit hostname to avoid confusion.
--->
-
-<p>The web archives are <a
-href="http://gcc.gnu.org/lists.html#searchbox">searchable</a>.</p>
-
 
 <h2>Subscribing/unsubscribing</h2>
 
@@ -308,6 +296,11 @@ can do right now.</p>
 
 <p>See also <a href="spam.html">information about dealing with spam on
 the lists</a>.</p>
+
+<!--
+  NOTE: The server-side included form does not show up at mirrors, so refer
+        to it by an explicit hostname to avoid confusion.
+-->
 
 <a name="searchbox"></a>
 <include searchbox.ihtml>
