--- a/htdocs/lists.html
+++ b/htdocs/lists.html
@@ -12,9 +12,8 @@
         not have that part of the site!
 -->
 
-<p><a name="gcc">The GCC project has many mailing lists, which are
-archived on the web (and
-<a href="http://gcc.gnu.org/lists.html#searchbox">searchable</a>)
+<p>The GCC project has many mailing lists, which are archived on the web
+(and <a href="http://gcc.gnu.org/lists.html#searchbox">searchable</a>)
 as well as in
 <a href="ftp://gcc.gnu.org/pub/gcc/mail-archives/">mbox format</a>.
 </p>
