Mention improvements on H8 port.

--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -374,6 +374,12 @@
     <li>Support for <code>long long</code> has been added.</li>
 
     <li>Support for <code>saveall</code> attribute has been added.</li>
+
+    <li>Pavel Pisa contributed hand-written 32-bit-by-32-bit division
+    code for H8/300H and H8S, which is much faster than the previous
+    implementation.</li>
+
+    <li>A lot of small performance improvements.</li>
   </ul>
 
 <h4>IA-32</h4>
