* contrib.html: Consolidate with main GCC patch submission 	information and remove lots of duplicate information. 	Minor (markup) tweaks.

--- a/htdocs/java/contrib.html
+++ b/htdocs/java/contrib.html
@@ -33,27 +33,21 @@ projects</a>.</p>
 </table>
 <br />
 
-  <p>All contributions must conform to the <a
-  href="http://www.gnu.ai.mit.edu/prep/standards_toc.html">GNU Coding
-  Standards</a>.  Submissions which do not conform to the standards will
-  be returned with a request to reformat the changes.</p>
+  <p>We follow the <a href="../codingconventions.html">GCC Coding
+  Conventions</a> with some extrapolations concerning Java programming
+  style:</p>
 
-  <p>Note that the GNU Coding Standards do not actually cover Java
-  programming style.  libgcj largely uses the obvious extrapolation
-  from the GNU C style, but there are some differences.</p>
-
-  <p>The changes are something like this:</p>
   <ul>
-  <li> Open braces go on a new line (like GNU C style) </li>
+  <li>Open braces go on a new line (like GNU C style).</li>
 
-  <li> Two space indent for methods and inner classes </li>
+  <li>Two space indent for methods and inner classes </li>
 
-  <li> <tt>if</tt>, <tt>try</tt>, <tt>for</tt>, and
-    <tt>synchronized</tt> blocks are indented four spaces (the braces are
-    indented two spaces, then the code an additional two spaces) </li>
+  <li><code>if</code>, <code>for</code>, <code>try</code>, and
+    <code>synchronized</code> blocks are indented four spaces (two for
+    the braces, and an additional two for the code).</li>
 
-  <li> The open brace for a method body is indented only as far as the
-    method header </li>
+  <li>The open brace for a method body is indented only as far as the
+    method header.</li>
   </ul>
 
 
@@ -66,31 +60,13 @@ projects</a>.</p>
 </table>
 <br />
 
-  <p>Every patch must have several pieces of information before we can
-  properly evaluate it.</p>
+  <p>Send libgcj patches to <a
+  href="mailto:java-patches@gcc.gnu.org">java-patches@gcc.gnu.org</a>.
+  This list is <a href="http://gcc.gnu.org/ml/java-patches/">archived</a>.</p>
 
-  <ul>
-  <li> A description of the bug and how your patch fixes this bug.  For
-       new features a description of the feature and your implementation.</li>
-  <li> A ChangeLog entry as plaintext; see the various ChangeLog files
-       for format and content.<br />
-       Note that, unlike some other projects, we do require ChangeLogs
-       also for documentation (i.e., .texi files).</li>
-  <li> The patch itself.  If you are accessing the
-       CVS repository at Red Hat, use &quot;cvs update; cvs diff -c3p&quot;;
-       else, use &quot;diff -c3p OLD NEW&quot; or &quot;diff -up OLD NEW&quot;.
-       If your version of diff does not support these options, then get the
-       latest version of GNU diff.</li>
-  </ul>
-
-    <p>Send <tt>libgcj</tt> patches to <a
-	href="mailto:java-patches@gcc.gnu.org">the patch mailing
-	list</a>.  This list is <a href="http://gcc.gnu.org/ml/java-patches/">archived</a>.</p>
-    <p>Patches to the gcj front end -- the <tt>gcc/java</tt> directory --
-       should be sent to <a href="mailto:gcc-patches@gcc.gnu.org">the gcc
-       patch mailing list</a>.  See <a
-       href="../contribute.html">the GCC contribution
-       instructions</a> for more information.</p>
+  <p>Patches to the GCJ front end &mdash; the <code>gcc/java</code>
+  directory &mdash; should be sent to the <a
+  href="mailto:gcc-patches@gcc.gnu.org">gcc-patches</a> list.</p>
 
 <br />
 <table border="0" cellpadding="4" width="95%">
