Fix various markup errors.  Sorry ;(

--- a/htdocs/gcc-3.4/mips-abi.html
+++ b/htdocs/gcc-3.4/mips-abi.html
@@ -28,12 +28,12 @@
 <table cellpadding="4">
   <tr valign="top">
     <th align="right">Affected&nbsp;ABIs</th>
-    <td>o32</th>
+    <td>o32</td>
   </tr>
 
   <tr valign="top">
     <th align="right">Endianness</th>
-    <td>little</th>
+    <td>little</td>
   </tr>
 
   <tr valign="top">
@@ -68,12 +68,12 @@ void f (struct s x);</pre>
 	  </tr>
 
 	  <tr align="center">
-	  <th align="left">Old&nbsp;behavior</td>
+	  <th align="left">Old&nbsp;behavior</th>
 	  <td>padding</td> <td>padding</td> <td>c[0]</td> <td>c[1]</td>
 	  </tr>
 
 	  <tr align="center">
-	  <th align="left">New&nbsp;behavior</td>
+	  <th align="left">New&nbsp;behavior</th>
 	  <td>c[0]</td> <td>c[1]</td> <td>padding</td> <td>padding</td>
 	  </tr>
 	</table></td>
@@ -85,12 +85,12 @@ void f (struct s x);</pre>
 <table cellpadding="4">
   <tr valign="top">
     <th align="right">Affected&nbsp;ABIs</th>
-    <td>n32 and n64</th>
+    <td>n32 and n64</td>
   </tr>
 
   <tr valign="top">
     <th align="right">Endianness</th>
-    <td>big</th>
+    <td>big</td>
   </tr>
 
   <tr valign="top">
@@ -127,13 +127,13 @@ void f (struct s x);</pre>
 	  </tr>
 
 	  <tr align="center">
-	  <th align="left">Old&nbsp;behavior</td>
+	  <th align="left">Old&nbsp;behavior</th>
 	  <td>padding</td> <td>padding</td> <td>padding</td> <td>padding</td>
 	  <td>padding</td> <td>padding</td> <td>c[0]</td> <td>c[1]</td>
 	  </tr>
 
 	  <tr align="center">
-	  <th align="left">New&nbsp;behavior</td>
+	  <th align="left">New&nbsp;behavior</th>
 	  <td>c[0]</td> <td>c[1]</td> <td>padding</td> <td>padding</td>
 	  <td>padding</td> <td>padding</td> <td>padding</td> <td>padding</td>
 	  </tr>
@@ -146,12 +146,12 @@ void f (struct s x);</pre>
 <table cellpadding="4">
   <tr valign="top">
     <th align="right">Affected&nbsp;ABIs</th>
-    <td>n32 and n64</th>
+    <td>n32 and n64</td>
   </tr>
 
   <tr valign="top">
     <th align="right">Endianness</th>
-    <td>either</th>
+    <td>either</td>
   </tr>
 
   <tr valign="top">
@@ -196,12 +196,12 @@ void f (struct s x);</pre>
 <table cellpadding="4">
   <tr valign="top">
     <th align="right">Affected&nbsp;ABIs</th>
-    <td>o32, o64, n32 and n64</th>
+    <td>o32, o64, n32 and n64</td>
   </tr>
 
   <tr valign="top">
     <th align="right">Endianness</th>
-    <td>either</th>
+    <td>either</td>
   </tr>
 
   <tr valign="top">
@@ -245,12 +245,12 @@ void f (struct s x);</pre>
 <table cellpadding="4">
   <tr valign="top">
     <th align="right">Affected&nbsp;ABIs</th>
-    <td>n32 and n64</th>
+    <td>n32 and n64</td>
   </tr>
 
   <tr valign="top">
     <th align="right">Endianness</th>
-    <td>big</th>
+    <td>big</td>
   </tr>
 
   <tr valign="top">
@@ -293,13 +293,13 @@ struct s f ();</pre>
 	  </tr>
 
 	  <tr align="center">
-	  <th align="left">Old&nbsp;behavior</td>
+	  <th align="left">Old&nbsp;behavior</th>
 	  <td>padding</td> <td>padding</td> <td>padding</td> <td>padding</td>
 	  <td>padding</td> <td>c[0]</td> <td>c[1]</td> <td>c[2]</td>
 	  </tr>
 
 	  <tr align="center">
-	  <th align="left">New&nbsp;behavior</td>
+	  <th align="left">New&nbsp;behavior</th>
 	  <td>c[0]</td> <td>c[1]</td> <td>c[2]</td> <td>padding</td>
 	  <td>padding</td> <td>padding</td> <td>padding</td> <td>padding</td>
 	  </tr>
@@ -312,12 +312,12 @@ struct s f ();</pre>
 <table cellpadding="4">
   <tr valign="top">
     <th align="right">Affected&nbsp;ABIs</th>
-    <td>n32 and n64</th>
+    <td>n32 and n64</td>
   </tr>
 
   <tr valign="top">
     <th align="right">Endianness</th>
-    <td>either</th>
+    <td>either</td>
   </tr>
 
   <tr valign="top">
