--- a/htdocs/contribute.html
+++ b/htdocs/contribute.html
@@ -18,7 +18,7 @@ improvements, etc....</p>
 contributions must meet:</p>
 
 <ul>
-<li><a href="#legal">Legal Prerequisits</a></li>
+<li><a href="#legal">Legal Prerequisites</a></li>
 <li><a href="#standards">Coding Standards</a></li>
 <li><a href="#testing">Testing Patches</a></li>
 <li><a href="#docchanges">Documentation Changes</a></li>
@@ -28,7 +28,7 @@ contributions must meet:</p>
 
 <hr />
 
-<h2><a name="legal">Legal Prerequisits</a></h2>
+<h2><a name="legal">Legal Prerequisites</a></h2>
 
 <p>Before we can incorporate significant contributions, certain
 legal requirements must be met.</p>
