--- a/htdocs/gcc-3.4/changes.html
+++ b/htdocs/gcc-3.4/changes.html
@@ -344,7 +344,7 @@
     the new code.</li>
 
     <li>Support for the Intel's iWMMXt architecture, a second
-    generation XScale processor, has been addded.
+    generation XScale processor, has been added.
     Enabled at run time with the <code>-mcpu=iwmmxt</code> command
     line switch.</li>
     
