--- a/htdocs/simtest-howto.html
+++ b/htdocs/simtest-howto.html
@@ -19,7 +19,7 @@
     <p>Testing with a simulator requires use of a combined tree;
     you can't easily build newlib, required for simulator testing,
     outside of a combined tree, and the build of the other components
-    is easist in a combined tree.</p>
+    is easiest in a combined tree.</p>
 
     <p>The combined tree contains GCC sources plus several modules of
     the <code>src</code> tree: <code>binutils</code> and
