--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -43,9 +43,9 @@ before any other arguments).</p>
 a password; reply with the empty string.</p>
 
 <p>Issue the command </p>
-<blockquote><p><code>cvs -z 9 co gcc</code></p></blockquote>
+<blockquote><p><code>cvs -z 9 co -P gcc</code></p></blockquote>
 to check out the compiler sources, respectively
-<blockquote><p><code>cvs -z 9 co wwwdocs</code></p></blockquote>
+<blockquote><p><code>cvs -z 9 co -P wwwdocs</code></p></blockquote>
 <p>to check out our web pages.</p>
 
 <p>Once you've got the repository checked out, <code>cvs update</code>
@@ -109,7 +109,7 @@ or the generator files, it is safe to delete the offending file, then run
 release branch with the following command:</p>
 
 <blockquote><p>
-<code>cvs -z 9 co -rgcc-<em>x</em>_<em>y</em>-branch gcc</code>
+<code>cvs -z 9 co -P -rgcc-<em>x</em>_<em>y</em>-branch gcc</code>
 </p></blockquote>
 
 <p>By changing the <code>-r</code> argument above you can check out
@@ -282,7 +282,7 @@ particular releases or snapshots or the latest snapshot.  </p>
 
 <p>The web pages for the GCC project are also in the CVS repository
 and you can check them out, submit patches, etc just like you do for
-the compiler itself.  Use <code>cvs co wwwdocs</code> to check out
+the compiler itself.  Use <code>cvs co -P wwwdocs</code> to check out
 the web pages.</p>
 
 <h2><a name="system">The host system</a></h2>
