--- a/htdocs/cvswrite.html
+++ b/htdocs/cvswrite.html
@@ -54,7 +54,7 @@ MAINTAINERS file to test write access, following the instructions below.</p>
 the command</p>
 
 <blockquote><p><code>
-cvs -z 9 -d :ext:<i>username</i>@gcc.gnu.org:/cvs/gcc co gcc
+cvs -z 9 -d :ext:<i>username</i>@gcc.gnu.org:/cvs/gcc co -P gcc
 </code></p></blockquote>
 
 <p>where <i>username</i> is your user name at gcc.gnu.org.</p>
