--- a/htdocs/cvs.html
+++ b/htdocs/cvs.html
@@ -167,6 +167,11 @@ particular releases or snapshots or the latest snapshot.  </p>
   No check-ins should be made to this branch unless authorized by
   CodeSourcery personnel.</dd>
 
+  <dt>csl-hpux-branch</dt>
+  <dd>CodeSourcery branch for developing hpux improvements.
+  No check-ins should be made to this branch unless authorized by
+  CodeSourcery personnel.</dd>
+
   <dt>dfa-branch</dt>
   <dd>This branch contains the insn scheduler with an automaton
   based pipeline hazard recognizer.</dd>
