* libgcj-classpath-compare.html: Rebuilt.

--- a/htdocs/java/libgcj-classpath-compare.html
+++ b/htdocs/java/libgcj-classpath-compare.html
@@ -8,7 +8,7 @@
 <p>This page compares the "current" cvs libgcj against the "current"
 cvs Classpath.  It was generated using the <code>gen-classpath-compare</code>
 script (available in gcc cvs repository in <code>wwwdocs/bin/</code>) on
-2003-11-16.
+2003-11-18.
 This table intentionally omits certain classes which are not of
 interest.  If the third column shows a "Diff" link, then that means
 the script believes that the class has been merged, but a difference
@@ -44,7 +44,6 @@ differences are currently required.</p>
 <tr> <td>java.awt.GridBagLayout</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.GridBagLayout.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.MediaTracker</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.MediaTracker.diff">Diff</a></td> </tr>
 <tr> <td>java.awt.geom.FlatteningPathIterator</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.awt.geom.FlatteningPathIterator.diff">Diff</a></td> </tr>
-<tr> <td>java.io.ByteArrayOutputStream</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.ByteArrayOutputStream.diff">Diff</a></td> </tr>
 <tr> <td>java.io.File</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.File.diff">Diff</a></td> </tr>
 <tr> <td>java.io.FileDescriptor</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>java.io.InputStreamReader</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/java.io.InputStreamReader.diff">Diff</a></td> </tr>
@@ -115,10 +114,12 @@ differences are currently required.</p>
 <tr> <td>javax.rmi.CORBA.ObjectImpl</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.CORBA.SystemException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
 <tr> <td>javax.rmi.ORB</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
+<tr> <td>javax.swing.UIDefaults</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.UIDefaults.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.UIManager</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.UIManager.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.undo.AbstractUndoableEdit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.AbstractUndoableEdit.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.undo.CannotRedoException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.CannotRedoException.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.undo.CannotUndoException</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.CannotUndoException.diff">Diff</a></td> </tr>
+<tr> <td>javax.swing.undo.CompoundEdit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.CompoundEdit.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.undo.StateEdit</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.StateEdit.diff">Diff</a></td> </tr>
 <tr> <td>javax.swing.undo.StateEditable</td> <td>Yes</td> <td>Yes</td> <td bgcolor="#aaaaee"><a href="compare/javax.swing.undo.StateEditable.diff">Diff</a></td> </tr>
 <tr> <td>javax.xml.parsers.ClassStuff</td> <td bgcolor="#eeeeaa">No</td> <td>Yes</td> <td bgcolor="#eeeeaa">No</td> </tr>
