2003-11-23  Toon Moene  <toon@moene.indiv.nluug.nl>
	* index.html: Links to Fortran reading material is now
	contained in "readings.html".
	* links.html: Removed.

--- a/htdocs/fortran/index.html
+++ b/htdocs/fortran/index.html
@@ -60,7 +60,7 @@ available</a>.</p>
 use the compiler once you have built it (or downloaded the binary).</p>
 
 <h2>Suggested reading</h2>
-<p>We provide links to some <a href="links.html">information</a> relevant to
+<p>We provide links to some <a href="../readings.html#fortran">information</a> relevant to
 Fortran programmers.</p>
 
 
